Registered resources by node to statusRoute
